Fixed: Spacing in footer

--- a/client/src/components/Homepage/Home.css
+++ b/client/src/components/Homepage/Home.css
@@ -23,6 +23,7 @@
 .aboutUs{
 	display: inline-flex;
 	width: 100%;
+	height: 615px;
 }
 .leftSide{
 	width: 50%;
